// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/BucketIcon > class names > should apply \`\` className if src is set 1`] = `
<img
  alt="Custom className"
  class="BucketIcon-root C A"
  src="https://custom-src"
/>
`;

exports[`components/BucketIcon > class names > should apply \`stub\` className if no src 1`] = `
<img
  alt="Stub className"
  class="BucketIcon-root S A"
  src="IMAGE_MOCK"
/>
`;

exports[`components/BucketIcon > class names > should apply className 1`] = `
<img
  alt="Set className"
  class="BucketIcon-root A"
  src="https://custom-src"
/>
`;

exports[`components/BucketIcon > should render custom src 1`] = `
<img
  alt="Custom src"
  class="BucketIcon-root"
  src="https://custom-src"
/>
`;

exports[`components/BucketIcon > should render default when no src 1`] = `
<img
  alt="No src"
  class="BucketIcon-root"
  src="IMAGE_MOCK"
/>
`;
